syntax = "proto3";

package granit.v1.disk;

option go_package = "cthul.io/cthul/pkg/api/granit/v1/disk";

import "granit/v1/disk/message.proto";

service DiskService {
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc List(ListRequest) returns (ListResponse) {}
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}
