syntax = "proto3";

package wave.v1.serial;

option go_package = "cthul.io/cthul/pkg/api/wave/v1/serial";

import "wave/v1/serial/message.proto";

service SerialService {
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc List(ListRequest) returns (ListResponse) {}
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}
