syntax = "proto3";

package api.wave.v1;

option go_package = "cthul.io/cthul/pkg/api/wave/v1;wavev1";

import "message.proto";

service DomainService {
  rpc GetDomain(GetDomainRequest) returns (GetDomainResponse) {}
}
